[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Pause" type="PopupPanel"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -892.0
margin_bottom = -456.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 304.0
margin_bottom = 190.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 176.0

[node name="MusicContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicContainer"]
margin_top = 1.0
margin_right = 200.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="MusicButton" type="CheckButton" parent="MarginContainer/VBoxContainer/MusicContainer"]
margin_left = 204.0
margin_right = 280.0
margin_bottom = 40.0

[node name="SFXContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 280.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFXContainer"]
margin_top = 1.0
margin_right = 200.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Sound Effects"

[node name="SFXButton" type="CheckButton" parent="MarginContainer/VBoxContainer/SFXContainer"]
margin_left = 204.0
margin_right = 280.0
margin_bottom = 40.0

[node name="RestartContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 280.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/RestartContainer"]
margin_right = 228.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Reset to Menu"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/RestartContainer"]
margin_left = 232.0
margin_right = 280.0
margin_bottom = 37.0
text = "Reset"

[node name="ResumeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 280.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ResumeContainer"]
margin_right = 212.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/ResumeContainer"]
margin_left = 216.0
margin_right = 280.0
margin_bottom = 37.0
text = "Resume"

[connection signal="about_to_show" from="." to="." method="_on_Pause_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_Pause_popup_hide"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MusicContainer/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SFXContainer/SFXButton" to="." method="_on_SFXButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
